--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,9 +4,17 @@
         <servlet-name>loginAdmin</servlet-name>
         <servlet-class>Servlets.loginAdmin</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>loginAlumno</servlet-name>
+        <servlet-class>Servlets.loginAlumno</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>loginAdmin</servlet-name>
         <url-pattern>/loginAdmin</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>loginAlumno</servlet-name>
+        <url-pattern>/loginAlumno</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
